[project]
name = "GateWatch"
description = ""
authors = [
    { name = "Michael Stepanov", email = "" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
# The version will be read from Git tags automatically
dynamic = ["version"]

dependencies = [
    "opencv-python>=4.12.0,<4.13",
    "deepface>=0.0.95,<0.0.96",
    "pydantic>=2.11.7,<2.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2,<8.0",
    "pytest-cov>=4.1,<5.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.1,<2.0",
    "pre-commit>=3.0,<4.0",
    "build>=1.0,<2.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# --- Tool Configurations ---

# Dynamic versioning using git tags
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff (linter + formatter) configuration
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# A good starting set of rules: pyflakes, pycodestyle, isort, etc.
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.isort]
profile = "black"
known_first_party = ["src"]
line_length = 88
include_trailing_comma = true
use_parentheses = true
combine_as_imports = true

# Mypy (type checker) configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
